# ISINGenerator

./: .gitignore  .readthedocs.yaml  1000000_100_10000.csv  1000000_100_7500.csv  10000_68_112.csv  10000_68_128.csv  10000_68_16.csv  10000_68_32.csv  10000_68_48.csv  10000_68_64.csv  10000_68_80.csv  10000_68_96.csv  1100000_110_12100.csv  1100000_110_9075.csv  1200000_120_10800.csv  1200000_120_14400.csv  1300000_130_12675.csv  1300000_130_16900.csv  32000_68_48.csv  32000_68_64.csv  32000_68_80.csv  360000_36_27.csv  360000_36_36.csv  490000_49_37.csv  490000_49_49.csv  640000_64_48.csv  640000_64_64.csv  640000_68_48.csv  640000_68_64.csv  640000_68_80.csv  64000_68_48.csv  64000_68_64.csv  64000_68_80.csv  810000_81_61.csv  810000_81_81.csv  96000_68_48.csv  96000_68_64.csv  96000_68_80.csv  C:\Users\danri\Documents\data_parte_2_2.csv  README.md  (+2 more)
docs/: conf.py  data.csv  data_nonzero.csv  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
isingenerator/: __about__.py  __init__.py  __main__.py  create_data_simulation.py  ising_model_2d.py  lattice_square.py  main_simulation.py  monte_carlo_simulation.py  neighbors.py  topological_variables.py  topological_variables_cythonize.pyx  writer_csv.py
isingenerator/test/: unit_test_ising_model.py  unit_test_lattice.py  unit_test_observables.py  unit_test_writer.py
source/: conf.py  create_data_simulation_class.rst  index.rst
src/: CreateDataSimulation.py  IsingModel2D.py  LatticeSquare.py  MainSimulation.py  MonteCarloSimulation.py  Neighbors.py  TopologicalVariables.py
structures/: classes_ISINGenerator.dot  packages_ISINGenerator.dot
test/: data.py  unit_test_ising_model.py  unit_test_observables.py  unit_test_topological.py  unit_test_writer.py
(+23 files in other folders)
